--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/node": "7.15.4",
     "@babel/preset-env": "7.15.6",
     "body-parser": "^1.20.2",
+    "dotenv": "10.0.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "nodemon": "^2.0.22"
